--- a/task_1.html
+++ b/task_1.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>hello</title>
 </head>
 
 <body>
     <script>
         'use strict'
-        let Tc = +prompt("Введите температуру в градусах по Цельсию");
-        let Tf = (9 / 5) * Tc + 32;
-        alert(`Температура по Фаренгейту: ${Tf}`);
-    </script>
-</body>
+        let a = 1, b = 1, c, d;
+        /* 
+        В примере ниже используется префиксаная форма. Т.е. ++a == a + 1. a уже равна 2.
+        И в c передается уже результат увеличения значения переменной.
+        Поэтому ответ 2.
+        */
+        c = ++a;
+        alert(c);
+        /* 
+        В примере ниже используется постфиксаная форма. Т.е. b++ == b+1. b уже равна 2.
+        Но в качестве результата в d передается предыдущее значение переменной, т.е. 1.
+        Поэтому ответ 1.
+        */
+        d = b++;
+        alert(d);
+        /* 
+        В примере ниже используется снова префиксаная форма. Т.е. a снова увеличивается на единицу и равна 3.
+        Поэтому ответ 2 + 3 = 5.
+        */
+        c = 2 + ++a;
+        alert(c);
+        /* 
+        В примере ниже используется снова постфиксаная форма. Т.е. b снова увеличивается на единицу и равна 3.
+        Но в d передается предыдущее значение, т.е. 2.
+        Поэтому ответ 2+2 = 4.
+        */
+        d = 2 + b++;
+        alert(d);
 
-</html>
+        alert(a);
+        alert(b);
+    </script>
+</body>>
