--- a/task_2.html
+++ b/task_2.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>hello</title>
 </head>
 
 <body>
     <script>
         'use strict'
-        let admin = null;
-        let name = 'Василий';
-        admin = name;
-        console.log(admin);
+        /*
+        Значение в переменной a увеличивается вдвое. Т.е. запись означает a = a *2. 
+        В итоге a = 4. Следовательно x = 1+4 = 5.
+        */
+        let a = 2;
+        let x = 1 + (a *= 2);
+
     </script>
-
 </body>
-
-</html>
