--- a/Task_6.html
+++ b/Task_6.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta charset='utf-8'>
-	<title>hello</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
 
 <body>
 	<script>
-		'use strict'
-		function sum_of_money() {
-			let money = +prompt("Укажите необходимую сумму для зачисления: ");
-			if (money % 10 == 1) {
-				alert(`Ваша сумма в ${money} рубль успешно зачислена.`);
-			} else if (money % 10 < 5 && money % 10 > 1) {
-				alert(`Ваша сумма в ${money} рубля успешно зачислена.`);
-			} else {
-				alert(`Ваша сумма в ${money} рублей успешно зачислена.`);
-			}
-		}
+		'use strict';
+		for (let i = 1; i < 21; console.log('x'.repeat(i++))) { };
 
-		sum_of_money();
 	</script>
 </body>
+
+</html>
