--- a/Task_5.html
+++ b/Task_5.html
@@ -1,49 +1,19 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta charset='utf-8'>
-	<title>hello</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
 
 <body>
 	<script>
-		'use strict'
-		function sum_nums(num_1, num_2) {
-			return num_1 + num_2;
-		}
+		'use strict';
+		for (let i = 0; i < 10; console.log(i++)) { };
 
-		function subtrc_nums(num_1, num_2) {
-			return num_1 - num_2;
-		}
-
-		function multiply_nums(num_1, num_2) {
-			return num_1 * num2_;
-		}
-
-		function divided_nums(num_1, num_2) {
-			return num_1 / num_2;
-		}
-
-		function mathOperation(arg1, arg2, operation) {
-			operation = operation.prototype.toLowerCase();
-			switch (operation) {
-				case "сумма":
-				case "сложение":
-					return arg1 + arg2;
-				case "вычитание":
-				case "разность":
-					return arg1 - arg2;
-				case "умножение":
-				case "произведение":
-					return arg1 * arg2;
-				case "деление":
-				case "частное":
-					return arg1 / arg2;
-			}
-		}
-		let math_operation = prompt("Выполняемая операция: ");
-		let arg_first = +prompt("Первый операнд: ");
-		let arg_second = +prompt("Второй операнд: ");
-		alert(mathOperation(arg_first, arg_second, math_operation));
 	</script>
 </body>
+
+</html>
