--- a/Task_4.html
+++ b/Task_4.html
@@ -37,10 +37,7 @@
 				price: 78,
 			},
 		];
-		const result = products.filter(product => 'photos' in product && product.photos.length > 0)
-		products.forEach(function (product) {
-			product.price *= 0.85;
-		});
+		const result = products.filter(product => 'photos' in product && product.photos.length > 0);
 		console.log(result);
 
 		products.sort(function (a, b) {
